@@ -1,0 +1,1 @@
+TRUECOLORABGR in Image.c
